# robotic_arm_framework

./: README  README.md  robotic_arm_framework.sln
new_robot/: CMakeLists.txt  package.xml
new_robot/config/: joint_names_new_robot.yaml
new_robot/launch/: display.launch  gazebo.launch  test_launch.launch
new_robot/meshes/: Link1.STL  Link2.STL  Link2.dae  Link3.STL  Link3.dae  Link4.STL  Link4.dae  base_link.STL  base_link.dae  finger1.STL  finger1.dae  finger2.STL  finger2.dae  finger3.STL  finger3.dae  gripper.STL  gripper.dae  link1.dae
new_robot/urdf/: new_robot.csv  new_robot.urdf
new_robot_controller/: CMakeLists.txt  package.xml
new_robot_controller/config/: controllers.yaml  robot_controllers.yaml  trajectory_controllers.yaml
new_robot_controller/launch/: controllers.launch  controllers_test.launch  trajectory_controllers.launch
path_planner/: CMakeLists.txt  package.xml
path_planner/include/path_planner/: IK_mod.h  Quaternion.h  robot.h  trajectory_generation.h
path_planner/src/: IK_mod.cpp  Quaternion.cpp  robot.cpp  robot_class_test.cpp  test.cpp  trajectory_generation.cpp
robotic_arm_framework/: IK_mod.cpp  IK_mod.h  Quaternion.cpp  Quaternion.h  robot.cpp  robot.h  robot_class_test.cpp  robotic_arm_framework.vcxproj  robotic_arm_framework.vcxproj.filters  trajectory_generation.cpp  trajectory_generation.h
